--- a/flow_market/templates/flow_market/inventory_chart.html
+++ b/flow_market/templates/flow_market/inventory_chart.html
@@ -10,6 +10,7 @@
             return {
                 datasets: [{
                     label: 'Inventories',
+                    pointRadius: 0,
                     data: [],
                     borderColor: BLUE,
                 }]
