--- a/flow_market/templates/flow_market/cash_chart.html
+++ b/flow_market/templates/flow_market/cash_chart.html
@@ -11,6 +11,7 @@
                 datasets: [{
                     label: 'Cash',
                     data: [],
+                    pointRadius: 0,
                     borderColor: BLUE,
                 }]
             }
