--- a/flow_market/templates/flow_market/FloMarketPage.html
+++ b/flow_market/templates/flow_market/FloMarketPage.html
@@ -68,14 +68,14 @@ Flo Market
 
 
 {% include "flow_market/constants.html" %}
-{% include "flow_market/order_graph.html" %}
-{% include "flow_market/order_book.html" %}
-{% include "flow_market/inventory_chart.html" %}
-{% include "flow_market/cash_chart.html" %}
-{% include "flow_market/order_table.html" %}
-{% include "flow_market/contract_table.html" %}
-{% include "flow_market/status_chart.html" %}
-{% include "flow_market/profit_chart.html" %}
+{% include "flow_market/flo/flo_order_graph.html" %}
+{% include "flow_market/flo/flo_order_book.html" %}
+{% include "flow_market/flo/flo_order_table.html" %}
+{% include "flow_market/common/inventory_chart.html" %}
+{% include "flow_market/common/cash_chart.html" %}
+{% include "flow_market/common/profit_chart.html" %}
+{% include "flow_market/common/status_chart.html" %}
+{% include "flow_market/common/contract_table.html" %}
 
 
 <div class="row1">
@@ -151,20 +151,20 @@ Flo Market
 </div>
 
 <script>
-    var orderBook = new OrderBook();
+    var orderBook = new FloOrderBook();
     orderBook.show();
 
-    var orderGraph = new OrderGraph();
+    var orderGraph = new FloOrderGraph();
     orderGraph.show();
+
+    var orderTable = new FloOrderTable();
+    orderTable.show();
 
     var inventoryChart = new InventoryChart();
     inventoryChart.show();
 
     var cashChart = new CashChart();
     cashChart.show();
-
-    var orderTable = new OrderTable();
-    orderTable.show();
 
     var contractTable = new ContractTable();
     contractTable.show();
