--- a/flow_market/templates/flow_market/flo/flo_order_table.html
+++ b/flow_market/templates/flow_market/flo/flo_order_table.html
@@ -1,5 +1,5 @@
 <script>
-    class OrderTable {
+    class FloOrderTable {
         show() {
             var table = document.querySelector('#activeOrderTable');
             var newRow = document.createElement('tr');
