--- a/flow_market/templates/flow_market/flo/flo_order_graph.html
+++ b/flow_market/templates/flow_market/flo/flo_order_graph.html
@@ -2,7 +2,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-dragdata@2.2.3/dist/chartjs-plugin-dragdata.min.js"></script>
 
 <script>
-    class OrderGraph {
+    class FloOrderGraph {
         // Class variables
         static myChart;
         static bidActive = true;
@@ -73,18 +73,18 @@
                     showTooltip: true,
                     onDragStart: function (e, datasetIndex, index, value) {
                         if (index == 0 || index == 4) { return false; }
-                        if (datasetIndex == BIDS_DATASETS_INDEX && !OrderGraph.bidActive) {
+                        if (datasetIndex == BIDS_DATASETS_INDEX && !FloOrderGraph.bidActive) {
                             return false;
                         }
-                        if (datasetIndex == ASKS_DATASETS_INDEX && !OrderGraph.askActive) {
+                        if (datasetIndex == ASKS_DATASETS_INDEX && !FloOrderGraph.askActive) {
                             return false;
                         }
                     },
                     onDrag: function (e, datasetIndex, index, value) {
-                        let bids = OrderGraph.myChart.data.datasets[0].data;
+                        let bids = FloOrderGraph.myChart.data.datasets[0].data;
                         let bidsMax = bids[MAX_PRICE_INDEX];
                         let bidsMin = bids[MIN_PRICE_INDEX];
-                        let asks = OrderGraph.myChart.data.datasets[1].data;
+                        let asks = FloOrderGraph.myChart.data.datasets[1].data;
                         let asksMax = asks[MAX_PRICE_INDEX];
                         let asksMin = asks[MIN_PRICE_INDEX];
                         if (datasetIndex == BIDS_DATASETS_INDEX) {
@@ -97,7 +97,7 @@
                                 if (value.y <= bidsMin.y) {
                                     bidsMax.y = bidsMin.y + 1;
                                 }
-                                if (!OrderGraph.askActive && value.y >= asksMin.y) {
+                                if (!FloOrderGraph.askActive && value.y >= asksMin.y) {
                                     bidsMax.y = asksMin.y - 1;
                                 }
                             } else {
@@ -120,7 +120,7 @@
                                 if (value.y >= asksMax.y) {
                                     asksMin.y = asksMax.y - 1;
                                 }
-                                if (!OrderGraph.bidActive && value.y <= bidsMax.y) {
+                                if (!FloOrderGraph.bidActive && value.y <= bidsMax.y) {
                                     asksMin.y = bidsMax.y + 1;
                                 }
                             } else {
@@ -155,10 +155,10 @@
                             if (element.index != MIN_PRICE_INDEX && element.index != MAX_PRICE_INDEX) {
                                 return;
                             }
-                            if (element.datasetIndex == BIDS_DATASETS_INDEX && !OrderGraph.bidActive) {
+                            if (element.datasetIndex == BIDS_DATASETS_INDEX && !FloOrderGraph.bidActive) {
                                 return;
                             }
-                            if (element.datasetIndex == ASKS_DATASETS_INDEX && !OrderGraph.askActive) {
+                            if (element.datasetIndex == ASKS_DATASETS_INDEX && !FloOrderGraph.askActive) {
                                 return;
                             }
                             document.querySelector("#orderGraph").style.cursor = "grab";
@@ -171,38 +171,38 @@
         }
 
         show() {
-            OrderGraph.myChart = new Chart(
+            FloOrderGraph.myChart = new Chart(
                 document.getElementById("orderGraph"), this.config);
         }
 
         update(data) {
-            OrderGraph.bidActive = data['bid_active'];
-            OrderGraph.myChart.data.datasets[0].data = data['bid_data'];
-            OrderGraph.buyOrderId = data['buy_order_id'];
+            FloOrderGraph.bidActive = data['bid_active'];
+            FloOrderGraph.myChart.data.datasets[0].data = data['bid_data'];
+            FloOrderGraph.buyOrderId = data['buy_order_id'];
             if (!data['bid_data']) {
                 this.disableButton(/*isBuy=*/true);
-            } else if (OrderGraph.bidActive) {
+            } else if (FloOrderGraph.bidActive) {
                 this.setPointsActive(/*isBuy=*/true);
             } else {
                 this.setPointsInactive(/*isBuy=*/true)
             }
 
-            OrderGraph.askActive = data['ask_active'];
-            OrderGraph.myChart.data.datasets[1].data = data['ask_data'];
-            OrderGraph.sellOrderId = data['sell_order_id'];
+            FloOrderGraph.askActive = data['ask_active'];
+            FloOrderGraph.myChart.data.datasets[1].data = data['ask_data'];
+            FloOrderGraph.sellOrderId = data['sell_order_id'];
             if (!data['ask_data']) {
                 this.disableButton(/*isBuy=*/false);
-            } else if (OrderGraph.askActive) {
+            } else if (FloOrderGraph.askActive) {
                 this.setPointsActive(/*isBuy=*/false);
             } else {
                 this.setPointsInactive(/*isBuy=*/false)
             }
-            OrderGraph.myChart.update();
+            FloOrderGraph.myChart.update();
         }
 
         shouldRequestUpdate() {
-            return OrderGraph.myChart.data.datasets[0].data.length == 0 &&
-                OrderGraph.myChart.data.datasets[1].data.length == 0;
+            return FloOrderGraph.myChart.data.datasets[0].data.length == 0 &&
+                FloOrderGraph.myChart.data.datasets[1].data.length == 0;
         }
 
         disableButton(isBuy) {
@@ -215,13 +215,13 @@
 
         setPointsActive(isBuy) {
             if (isBuy) {
-                let datasets = OrderGraph.myChart.data.datasets[0];
+                let datasets = FloOrderGraph.myChart.data.datasets[0];
                 datasets["pointRadius"] = [0, 6, 6, 0];
                 datasets["borderColor"] = BLUE_TRANSPARENT;
                 document.querySelector("#buyButton").disabled = false;
                 document.querySelector("#buyButton").innerText = "Send Buy";
             } else {
-                let datasets = OrderGraph.myChart.data.datasets[1];
+                let datasets = FloOrderGraph.myChart.data.datasets[1];
                 datasets["pointRadius"] = [0, 6, 6, 0];
                 datasets["borderColor"] = RED_TRANSPARENT;
                 document.querySelector("#sellButton").disabled = false;
@@ -231,13 +231,13 @@
 
         setPointsInactive(isBuy) {
             if (isBuy) {
-                let datasets = OrderGraph.myChart.data.datasets[0];
+                let datasets = FloOrderGraph.myChart.data.datasets[0];
                 datasets["pointRadius"] = [0, 0, 0, 0];
                 datasets["borderColor"] = BLUE;
                 document.querySelector("#buyButton").disabled = false;
                 document.querySelector("#buyButton").innerText = "Cancel Buy";
             } else {
-                let datasets = OrderGraph.myChart.data.datasets[1];
+                let datasets = FloOrderGraph.myChart.data.datasets[1];
                 datasets["pointRadius"] = [0, 0, 0, 0];
                 datasets["borderColor"] = RED;
                 document.querySelector("#sellButton").disabled = false;
@@ -247,28 +247,28 @@
 
 
         static buyButtonClick() {
-            let datasets = OrderGraph.myChart.data.datasets[BIDS_DATASETS_INDEX];
+            let datasets = FloOrderGraph.myChart.data.datasets[BIDS_DATASETS_INDEX];
             let button = document.querySelector("#buyButton");
-            if (OrderGraph.bidActive) {
+            if (FloOrderGraph.bidActive) {
                 let quantity = document.querySelector("#buyQuantityInput");
-                liveSend(OrderGraph.parseOrder('buy', datasets["data"], parseInt(quantity.value)));
+                liveSend(FloOrderGraph.parseOrder('buy', datasets["data"], parseInt(quantity.value)));
             } else {
                 liveSend({
                     'message_type': 'remove_order',
-                    'order_id': OrderGraph.buyOrderId
+                    'order_id': FloOrderGraph.buyOrderId
                 });
             }
         }
 
         static sellButtonClick() {
-            let datasets = OrderGraph.myChart.data.datasets[ASKS_DATASETS_INDEX];
-            if (OrderGraph.askActive) {
+            let datasets = FloOrderGraph.myChart.data.datasets[ASKS_DATASETS_INDEX];
+            if (FloOrderGraph.askActive) {
                 let quantity = document.querySelector("#buyQuantityInput");
-                liveSend(OrderGraph.parseOrder('sell', datasets["data"], parseInt(quantity.value)));
+                liveSend(FloOrderGraph.parseOrder('sell', datasets["data"], parseInt(quantity.value)));
             } else {
                 liveSend({
                     'message_type': 'remove_order',
-                    'order_id': OrderGraph.sellOrderId
+                    'order_id': FloOrderGraph.sellOrderId
                 });
             }
         }
