--- a/flow_market/templates/flow_market/FloMarketPage.html
+++ b/flow_market/templates/flow_market/FloMarketPage.html
@@ -110,15 +110,15 @@ Flo Market
             <h5>Your Input</h5>
             <canvas id="orderGraph"></canvas>
             <div>
-                <button id="buyQuantityInc" onclick="OrderGraph.buyQuantityButtonClick(true)">+</button>
+                <button id="buyQuantityInc" onclick="FloOrderGraph.buyQuantityButtonClick(true)">+</button>
                 <input id="buyQuantityInput" type="number" value="10" min="1" max="100" step="5" />
-                <button id="buyQuantityDec" onclick="OrderGraph.buyQuantityButtonClick(false)">-</button>
-                <button type="button" id="buyButton" onclick="OrderGraph.buyButtonClick()">Send Buy</button>
+                <button id="buyQuantityDec" onclick="FloOrderGraph.buyQuantityButtonClick(false)">-</button>
+                <button type="button" id="buyButton" onclick="FloOrderGraph.buyButtonClick()">Send Buy</button>
 
-                <button id="sellQuantityInc" onclick="OrderGraph.sellQuantityButtonClick(true)">+</button>
+                <button id="sellQuantityInc" onclick="FloOrderGraph.sellQuantityButtonClick(true)">+</button>
                 <input id="sellQuantityInput" type="number" value="10" min="1" max="100" step="5" />
-                <button id="sellQuantityDec" onclick="OrderGraph.sellQuantityButtonClick(false)">-</button>
-                <button type="button" id="sellButton" onclick="OrderGraph.sellButtonClick()">Send Sell</button>
+                <button id="sellQuantityDec" onclick="FloOrderGraph.sellQuantityButtonClick(false)">-</button>
+                <button type="button" id="sellButton" onclick="FloOrderGraph.sellButtonClick()">Send Sell</button>
             </div>
         </div>
         <div class="block">
