--- a/flow_market/templates/flow_market/CdaMarketPage.html
+++ b/flow_market/templates/flow_market/CdaMarketPage.html
@@ -69,6 +69,7 @@ CDA Market
 
 {% include "flow_market/constants.html" %}
 {% include "flow_market/cda/cda_order_graph.html" %}
+{% include "flow_market/cda/cda_order_book.html" %}
 {% include "flow_market/common/inventory_chart.html" %}
 {% include "flow_market/common/cash_chart.html" %}
 {% include "flow_market/common/profit_chart.html" %}
@@ -142,6 +143,9 @@ CDA Market
 </div>
 
 <script>
+    var orderBook = new CdaOrderBook();
+    orderBook.show();
+
     var orderGraph = new CdaOrderGraph();
     orderGraph.show();
 
@@ -173,6 +177,9 @@ CDA Market
     }, 1000);
 
     function liveRecv(data) {
+        if (data['order_book_data']) {
+            orderBook.update(data['order_book_data']);
+        }
         if (data['order_graph_data']) {
             orderGraph.update(data['order_graph_data']);
         }
