--- a/flow_market/templates/flow_market/CdaMarketPage.html
+++ b/flow_market/templates/flow_market/CdaMarketPage.html
@@ -183,6 +183,12 @@ CDA Market
         if (data['order_graph_data']) {
             orderGraph.update(data['order_graph_data']);
         }
+        if (data['inventory_chart_data']) {
+            inventoryChart.update(data['inventory_chart_data']);
+        }
+        if (data['cash_chart_data']) {
+            cashChart.update(data['cash_chart_data']);
+        }
     }
 
 </script>
