--- a/flow_market/templates/flow_market/cda/cda_order_graph.html
+++ b/flow_market/templates/flow_market/cda/cda_order_graph.html
@@ -242,8 +242,8 @@
             return {
                 'message_type': 'add_order',
                 'direction': direction,
-                'price': data[1].x,
-                'quantity': data[1].y,
+                'quantity': data[1].x,
+                'price': data[1].y,
             };
         }
     }
