--- a/flow_market/templates/flow_market/common/order_table.html
+++ b/flow_market/templates/flow_market/common/order_table.html
@@ -1,5 +1,5 @@
 <script>
-    class FloOrderTable {
+    class OrderTable {
         show() {
             var table = document.querySelector('#activeOrderTable');
             var newRow = document.createElement('tr');
