--- a/flow_market/templates/flow_market/cda/cda_order_graph.html
+++ b/flow_market/templates/flow_market/cda/cda_order_graph.html
@@ -95,7 +95,7 @@
                         } else {
                             // Dragging asks
                             if (!CdaOrderGraph.bidActive && value.y <= bidsPoint.y) {
-                                asksMin.y = bidsPoint.y + 1;
+                                asksPoint.y = bidsPoint.y + 1;
                             }
                             asks[0].y = asksPoint.y;
                             asks[2].x = asksPoint.x;
