fix rounding error

--- a/flow_market/templates/flow_market/flo/flo_order_graph.html
+++ b/flow_market/templates/flow_market/flo/flo_order_graph.html
@@ -176,6 +176,7 @@
         }
 
         update(data) {
+            console.log(data);
             FloOrderGraph.bidActive = data['bid_active'];
             FloOrderGraph.myChart.data.datasets[0].data = data['bid_data'];
             FloOrderGraph.buyOrderId = data['buy_order_id'];
